--- a/www/index.html
+++ b/www/index.html
@@ -14,11 +14,13 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+    <script src="lib/ionic.ion.imagecachefactory.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+
   </head>
   <body ng-app="starter">
     <!--
